--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Run formatter check
         run: deno fmt --check
 
-      - name: Run tests
-        run: deno test --allow-read --allow-write
-
       - name: Type check
-        run: deno check mod.ts
+        run: deno check
+
+      - name: Run tests
+        run: deno test
