--- a/deno.json
+++ b/deno.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "exports": "./mod.ts",
   "tasks": {
-    "dev": "deno run --watch mod.ts",
-    "test": "deno test --allow-read --allow-write"
+    "dev": "deno run --watch mod.ts"
   },
   "lint": {
     "rules": {
