--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Setup Deno
-        uses: denoland/setup-deno
+        uses: denoland/setup-deno@v2
 
       - name: Publish to JSR
         run: deno publish
