remove armor option, clalify return type

--- a/deno.json
+++ b/deno.json
@@ -12,6 +12,7 @@
   "imports": {
     "@std/cli": "jsr:@std/cli@^1.0.25",
     "@std/io": "jsr:@std/io@^0.225.2",
+    "@std/assert": "jsr:@std/assert@^1.0.0",
     "tweetnacl": "npm:tweetnacl@^1.0.3",
     "@msgpack/msgpack": "npm:@msgpack/msgpack@^3.0.0-beta2"
   },
