--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,14 +18,7 @@ jobs:
       - name: Setup Deno
         uses: denoland/setup-deno@v2
 
-      - name: Run linter
-        run: deno lint
-
-      - name: Run formatter check
-        run: deno fmt --check
-
-      - name: Type check
-        run: deno check
-
-      - name: Run tests
-        run: deno test
+      - run: deno lint
+      - run: deno check
+      - run: deno test -P
+      - run: deno fmt --check
