--- a/deno.json
+++ b/deno.json
@@ -8,9 +8,9 @@
   "imports": {
     "@std/cli": "jsr:@std/cli@^1.0.25",
     "@std/io": "jsr:@std/io@^0.225.2",
-    "@std/assert": "jsr:@std/assert@^1.0.0",
+    "@std/assert": "jsr:@std/assert@^1.0.16",
     "tweetnacl": "npm:tweetnacl@^1.0.3",
-    "@msgpack/msgpack": "npm:@msgpack/msgpack@^3.0.0-beta2"
+    "@msgpack/msgpack": "npm:@msgpack/msgpack@^3.1.3"
   },
   "version": "0.1.7",
   "exports": {
