--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
   "tasks": {
     "dev": "deno run --watch mod.ts",
     "check:all": "deno check && deno lint && deno test -P && deno fmt",
-    "release": "deno run --allow-read --allow-write --allow-run=git scripts/release.ts"
+    "release": "deno run --allow-read=deno.json --allow-write=deno.json scripts/release.ts"
   },
   "imports": {
     "@std/cli": "jsr:@std/cli@^1.0.25",
