--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
   "tasks": {
     "dev": "deno run --watch mod.ts",
     "check:all": "deno check && deno lint && deno test -P && deno fmt",
-    "release": "deno run --allow-read=deno.json --allow-write=deno.json scripts/release.ts"
+    "release": "deno run --allow-read=deno.json --allow-write=deno.json --allow-run=git scripts/release.ts"
   },
   "imports": {
     "@std/cli": "jsr:@std/cli@^1.0.25",
@@ -12,7 +12,7 @@
     "tweetnacl": "npm:tweetnacl@^1.0.3",
     "@msgpack/msgpack": "npm:@msgpack/msgpack@^3.1.3"
   },
-  "version": "0.1.7",
+  "version": "0.2.0",
   "exports": {
     ".": "./mod.ts",
     "./cli": "./src/cli.ts"
